// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card handles depth=2 1`] = `
.c0 {
  border-radius: 4px;
  padding: 4px;
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.27);
  border-radius: 4px;
}

<div
  className="c0"
/>
`;

exports[`Card renders a drop shadow by default 1`] = `
.c0 {
  border-radius: 4px;
  padding: 4px;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.27);
  border-radius: 4px;
}

<div
  className="c0"
/>
`;

exports[`Card renders a standard border when depth is 0 1`] = `
.c0 {
  border-radius: 4px;
  border: 1px solid #777777;
  padding: 4px;
  box-shadow: none;
  border-radius: 4px;
  border: 1px solid #777777;
}

<div
  className="c0"
/>
`;
